duck/test/fail/unify.duck
import base
main = exit 0

_ = case True of
  True -> 1
  False -> 'a'
